✨  :: [Geral] :: Revisa entities